chore: polish code